[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uroman-fast"
version = "0.1.0b"
description = "Fast Python wrapper for uroman-rs universal romanizer"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Biswajit Satapathy", email = "biswajit2902@example.com" }]
keywords = ["romanization", "transliteration", "unicode", "nlp", "uroman"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/Biswajit2902/uroman-fast"
Repository = "https://github.com/Biswajit2902/uroman-fast"
Documentation = "https://github.com/Biswajit2902/uroman-fast#readme"
